styles.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Figtree', sans-serif;
}

.navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-logo {
    margin-left: 1vw;
    width: 150px;
    height: 70px;
    object-fit: cover;
}

.nav-links {
    align-items: center;
    display: flex;
    gap: 2vw;
}

.log-in-sign-up {
    align-items: center;
    display: flex;
    gap: 1vw;
    margin-right: 1vw;
}

.nav-links a {
    color: black;
    font-size: 17px;
    letter-spacing: 2.04%;
    text-decoration: none;
}

.nav-links a:hover {
    text-decoration: underline;
}

.hamburger-menu {
    display: none;
}

.sign-up-1 {
    color: white;
    background-color: #103F85;
    font-size: 17px;
    padding-top: 6px;
    padding-bottom: 6px;
    padding-left: 21px;
    padding-right: 21px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
}

.sign-up-2 {
    color: white;
    background-color: #103F85;
    font-size: 17px;
    padding-top: 11px;
    padding-bottom: 11px;
    padding-left: 55px;
    padding-right: 55px;
    border: none;
    border-radius: 10px;
    cursor: pointer;
}

.close-button {
    display: none;
}

.hero-section {
    display: flex;
    height: 60dvh;
    width: 100vw;
}

.half-one {
    flex: 1;
    width: 50%;
}

.half-one img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.half-two {
   display: flex;
   flex: 1;
   gap: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgba(153, 204, 255);
   width: 50%;
}

.hero-links {
    display: flex;
    gap: 5px;
    flex-direction: column;
    align-items: center;
}

.hero-links a {
    font-size: 16px;
    letter-spacing: 4.2%;
    color: #4D4D4D;
    text-decoration: underline;
    cursor: pointer;
}

h1 {
    margin: 0;
    font-size: 35px;
    letter-spacing: 4.2%;
}

@media (max-width: 768px) {
    .nav-links {
        display: none;
    }

    .hamburger-menu {
        display: flex;
        margin-right: 1vw;
        cursor: pointer;
    }

    .nav-links.active-links {
        display: flex;
        position: fixed;
        top: 0;
        right: 0;
        gap: 4dvh;
        width: 100vw;
        height: 100dvh;
        justify-content: center;
        flex-direction: column;
        background-color: rgba(153, 204, 255, 0.8);
        z-index: 1000;
    }

    .nav-links a {
        font-size: 22px;
        letter-spacing: 2.4%;
    }

    .log-in-sign-up {
        gap: 2vw;
    }

    .sign-up {
        font-size: 22px;
        letter-spacing: 2.4%;
    }

    .close-button {
        display: flex;
        position: absolute;
        top: 1dvh;
        right: 1vw;
        cursor: pointer;
    }

    .close-button img {
        width: 50px;
        height: 50px;
    }

    .hero-section {
        flex-direction: column;
        height: auto;
        width: 100%;
    }

    .half-one {
        flex: none;
        height: 50dvh;
        width: 100%;
    }

    .half-two {
        flex: none;
        height: 50dvh;
        width: 100%;
    }
}

